frontend: Add light time pickers

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -39,8 +39,9 @@ html {
   border-radius: var(--border-radius);
 }
 
-.p-inputtext {
-  width: 100%;
+.p-inputtext,
+.p-calendar {
+  width: 100% !important;
 }
 
 .p-toast {
